--- a/content/01/06_python.ipynb
+++ b/content/01/06_python.ipynb
@@ -21,7 +21,7 @@
     "- Codeacademy is great. You can probably blast through the key lessons before a free trial expires (currently=7 days). \n",
     "- Go through #3 to #14 of [A Whirlwind Tour of Python](https://github.com/jakevdp/WhirlwindTourOfPython).\n",
     "\n",
-    "As you follow either of those, I would put the code you write inside the `/codebook/` folder inside your Class Notes repo. \n",
+    "As you follow either of those, I would put the code you write inside the `/learning_python/` (or similar) folder inside your Class Notes repo. \n",
     "- You can call the file(s) whatever you want. (If you want a suggestion for a filename, \"Cheatsheet\", \"Whirlwind Cheatsheet\", or \"Codeacademy Cheatsheet\" make sense.)\n",
     "- Our [resources page](../about/resources) has a python cheatsheet you can download. \n",
     "\n",
