--- a/content/01/06_python.ipynb
+++ b/content/01/06_python.ipynb
@@ -637,7 +637,7 @@
     "6. use `return <object>` at the end of the function to output the object the function makes (which could be any type of object!)\n",
     "\n",
     "```python\n",
-    "def <nameOfYourChoice>(<you can specify arguments the function takes, or none>):` \n",
+    "def <nameOfYourChoice>(<you can specify arguments the function takes, or none>):\n",
     "    # and then write your indented code block that is the function. \n",
     "```    \n",
     "\n",
@@ -645,11 +645,29 @@
     "\n",
     "On inputs: \n",
     "- **Any object(s) you want can be given as inputs!** You can give as inputs a variable, a list, a dictionary, even a function. Remember, in python, _everything is an object_. \n",
-    "- You choose the name an object will be referred to as _within_ the function. In the example below, a user passes a number into the function, and the function cals whatever number you give it \"x\" and then checks if `x<0`\n",
-    "- Functions can get \"positional\" arguments or keyword arguments. Positional arguments are understood because Python figures them out based on the order in which you provide them.\n",
+    "- You choose the name an object will be referred to as _within_ the function. In the example below, a user passes a number into the function, and the function calls whatever number you give it \"x\" and then checks if `x<0`\n",
+    "- Functions can get \"positional\" arguments or keyword arguments. Positional arguments are based on the order in which you provide them to the function. Keyword arguments can be specified by including their name, without needing to be in the right spot in the order of arguments (like `b=3` below).\n",
     "\n",
     "On outputs:\n",
-    "- **Any object(s) you want can be returned as outputs!** Once the code executes a line starting with `return`, the function will end and output whatever is on that line. It can be a list, set, function, dictionary, string. It can be a dictionary with lists inside it, or a list with dictionaries inside it. Go wild if you want! (While practicing python. In practice, don't be complex for the sake of it!)\n",
+    "- Once the code _**executes**_ a line starting with `return`, the function will end and output whatever is on that line.\n",
+    "- **Any object(s) you want can be returned as outputs!** The output can be a list, set, function, dictionary, string. It can be a dictionary with lists inside it, or a list with dictionaries inside it. Go wild if you want! (But only while practicing your skills. In practice, don't be complex for the sake of it!)\n",
+    "\n",
+    "````{warning}\n",
+    "Functions can print things while executing. This can be useful while debugging a function and testing it. Because of that, people new to python often use \"print\" at the end of functions instead of return. \n",
+    "\n",
+    "However, `print` DOES NOT EQUAL `return`! \n",
+    "\n",
+    "**If you want to reuse the output at any point later in your code, use return instead of print!**\n",
+    "\n",
+    "```python\n",
+    "def silly_me():\n",
+    "    # a simple function for illustration, just outputs a string\n",
+    "    return \"this is a string\"\n",
+    "    \n",
+    "a = silly_me() # now \"a\" is the string \"this is a string\"\n",
+    "print(a)       # and you can print the output without putting print in the function\n",
+    "```\n",
+    "````\n",
     "\n",
     "On documentation:\n",
     "- Code that is poorly documented won't be used. By you, by you in the future, or by others. So you should document it! You do this by adding line(s) immediately after the first line, as the example below shows.\n",
