github page pre-reorg

--- a/content/01/03_github.ipynb
+++ b/content/01/03_github.ipynb
@@ -5,14 +5,17 @@
    "metadata": {},
    "source": [
     "# Github Basics\n",
-    "\n"
+    "\n",
+    "```{important}\n",
+    "The most important part of this page is the [GitHub Workflow](#github-for-version-control). You should \n",
+    "```\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Why Github? \n",
+    "## Why are we using Github? \n",
     "\n",
     "_**Note: I use Windows and will be of less help for Mac users. The TA, however, uses Mac and will be more helpful when issues stem from OS differences. GitHub, in particular, might be finicky if you have outdated versions of Safari or any other browser.**_\n",
     "\n",
@@ -20,12 +23,15 @@
     "\n",
     "- All of your course-related work will go on GitHub.\n",
     "- Discussion / help / announcements will happen on GitHub. (Yes, announcements!)\n",
-    "- This entire website is on GitHub!\n",
-    "- Assignments are posted on GitHub.\n",
+    "- This entire textbook is on GitHub!\n",
+    "- Assignments are \"posted\" and \"submitted\" on GitHub.\n",
     "\n",
-    "But why GitHub? Because it's tremendously effective for developing a project. It is used by [Apple](https://github.com/apple), [Uber](https://github.com/uber), [Netflix](https://github.com/Netflix), Google, Microsoft, Bitcoin, CERN, Chinese censors (wait, what?), and many more large, sophisticated, multi-billion dollar entities.\n",
+    "But why GitHub? Because it's tremendously effective for developing projects. It is used by [Apple](https://github.com/apple), [Uber](https://github.com/uber), [Netflix](https://github.com/Netflix), Google, Microsoft, Bitcoin, CERN, Chinese censors (wait, what?), and many more large, sophisticated, multi-billion dollar entities.\n",
     "\n",
-    "It's useful for (1) cloud storage, (2) collaboration, and (3) version control.\n",
+    "It's useful for \n",
+    "1. cloud storage,\n",
+    "2. collaboration,\n",
+    "3. and version control.\n",
     "\n",
     "Let's get started!\n",
     "\n",
@@ -33,15 +39,15 @@
     "\n",
     "At the very least, GitHub allows for cloud storage, like Google Drive and Dropbox do. There's a bit more structure than just storing files under your account:\n",
     "\n",
-    "- __Repositories (aka \"repo\")__: All files must be organized into _repositories_. Think of these as folders with **self-contained** projects. These can either be _public_ or _private_.\n",
-    "- __User Accounts__ vs. __Organization Accounts (aka \"Org\")__: All repositories belong to an account:\n",
-    "    - A _user account_ is the account you just made, and typically holds repositories related to your own work. \n",
-    "    - An _Organization_ account can be owned by multiple people, and typically holds repositories relevant to a group (like STAT 545).\n",
+    "- __Repositories (aka \"repo\")__: All files must be organized into _repositories_. A repo is just a folder for a **self-contained** project. Repos can either be _public_ (like [this textbook](https://github.com/LeDataSciFi/ledatascifi-2022/)) or _private_ (like your assignments).\n",
+    "- All repositories belong to a __user account__ or an __organization account (aka \"org\")__: \n",
+    "    - A _user account_ is the account you just made, and typically holds repositories related to your own work. [Here is mine.](https://github.com/donbowen/)\n",
+    "    - An _organization_ account can be owned by multiple people, and typically holds repositories relevant to a group. The [LeDataSciFi organization](https://github.com/LeDataSciFi/) account is owned by me, and contains the textbook and all of our assignments.\n",
     "\n",
     "Examples: \n",
     "\n",
     "- The [`awesome-python`](https://github.com/vinta/awesome-python) repo is a \"curated list of awesome Python frameworks, libraries, software and resources\" \n",
-    "- The [`ledatascifi-2022`](https://github.com/LeDataSciFi/ledatascifi-2022) repo, within its corresponding `LeDataSciFi` Org contains these lectures. \n"
+    "- The [`ledatascifi-2022`](https://github.com/LeDataSciFi/ledatascifi-2022) repo, within its corresponding `LeDataSciFi` Org contains this textbook. \n"
    ]
   },
   {
@@ -57,11 +63,11 @@
     "3. Modify the repo **in the cloud** and, then, \"fetch\" those changes to your computer. Think of \"fetch\" as syncing your computer to catch up with any changes in the master.\n",
     "4. Modify the repo **on your computer**, and then, \"push\" those changes to the cloud. Think of \"push\" as syncing the master to catch up with any changes from your computer.\n",
     "\n",
-    "With those exercises, done you're ready to work with GitHub. We will also explore \n",
+    "With those exercises done, you're ready to start working while using GitHub. We'll learn more as we go along in the class, including\n",
     "\n",
-    "- What a good `README` file is\n",
-    "- Understand what the `.gitignore` file is and how/why to use it \n",
-    "- What a merge conflict is and how to resolve it\n"
+    "- what a good `README` file does and can look like - [I _personally_ like this one](https://github.com/donbowen/BFH) but take a quick look at [this list of awesome readmes](https://github.com/matiassingers/awesome-readme) for inspiration\n",
+    "- [what the `.gitignore` file in our repos is and how/why to use it ](09_gitignore)\n",
+    "- what a merge conflict is and how to resolve it\n"
    ]
   },
   {
@@ -80,14 +86,20 @@
     "\n",
     "GitHub (not just \"Git\") is built on top of the Git system. Among the many added features that make collaboration easier, two are worth highlighting:\n",
     "\n",
-    "- The GitHub repository is treated as the \"master version\".\n",
-    "- **You can (and probably should!) use [GitHub Issues](https://guides.github.com/features/issues/) instead of email to track open tasks.** \n",
-    "    - _Issues_ are a discussion board corresponding to a particular repository. \n",
-    "    - One \"thread\" is called an Issue. Some features:\n",
-    "    - You can tag other GitHub users using `@username`. \n",
-    "    - Get email notifications if you are tagged, or are `Watch`ing a repository.\n",
+    "1. The GitHub repository is treated as the \"master version\".\n",
+    "    - You and collaborators work on the files on your computer and sync them to the cloud to update the master version.\n",
+    "    - Use the [GitHub Workflow](#github-for-version-control) to make sure you and your collaborators don't make conflicting changes to a file. \n",
+    "2. [GitHub Issues](https://guides.github.com/features/issues/) make it easier to track project tasks than using email.    \n",
+    "    - Each repo has an _Issues_ tab that functions as a discussion board.\n",
+    "    - One \"thread\" is called an Issue. \n",
+    "    - You can tag other GitHub users by typing `@username`. E.g. using `@donbowen`.  \n",
+    "    - You get email notifications if you are tagged, or are `Watch`ing a repository.\n",
     "\n",
-    "As an example, check out the Issues in the [`ggplot2`](https://github.com/tidyverse/ggplot2/issues) repository. People raise issues of all kinds, and then when they are solved, \"Close\" the issue. You can \n",
+    "As an example, check out the Issues in the [`ggplot2`](https://github.com/tidyverse/ggplot2/issues) repository. People raise issues of all kinds, and then when they are solved, \"Close\" the issue. \n",
+    "\n",
+    "```{tip}\n",
+    "When you have a question about your grades or a private question about an assignment, you can open that repo, click on the \"Issues\" tab, and create a new issue. Make sure to tag me and the TA in the text so we see your post.\n",
+    "```\n",
     "\n",
     "We will talk about collaboration later. Suffice it to say, managing group tasks is of paramount importance in virtually all jobs you might have after college."
    ]
@@ -114,12 +126,13 @@
    "source": [
     "## GitHub for version control  \n",
     "\n",
-    "Why use version control? In addition to the awful \"file naming conundrum\" in the comic above,\n",
+    "Version control is a time machine! \n",
     "\n",
-    "- Don't fret removing stuff\n",
-    "- Leave a breadcrumb trail for troubleshooting\n",
-    "- \"Undo\" and navigate a previous state: \"Time machine\" \n",
-    "- Helps you define your work\n",
+    "- Instead of the awful \"file naming conundrum\" in the comic above, you just keep one file, \"FINAL.doc\"!\n",
+    "- Delete stuff and recover it later easily \n",
+    "- Leave a breadcrumb trail for troubleshooting - if some update broke your code, you can go back and see what changed when it broke\n",
+    "- \"Undo\" and navigate a previous state\n",
+    "- Helps you define your work and show contributions.\n",
     "\n",
     "The way you work on project with GitHub is by following what I will call \n",
     "[the GitHub Workflow](assignments/howto_do.html#working-on-assignments-projects-taking-notes):\n",
@@ -172,7 +185,7 @@
     "\n",
     "### Practice\n",
     "\n",
-    "- Fact: Git only pushes/tracks the _changes_ (called a _diff_) associated with a commit, so that it doesn't need to take a snapshot of all your files each time. \n",
+    "- Fact: Git only pushes/tracks the _changes_ (called a _diff_) associated with a commit, so that it doesn't need to take a snapshot of the entirety of all your files each time. \n",
     "- View commit history of the [LeDataSciFi.github.io](https://github.com/LeDataSciFi/LeDataSciFi.github.io) repository by clicking on the \"commits\" button on the repo home page. (You'll end up [here](https://github.com/LeDataSciFi/LeDataSciFi.github.io/commits/master).)\n",
     "- View a recent \"diff\" by clicking on the description of the commit or the button with the _SHA_ or _hash_ code (something like `990cf9a`).\n",
     "    - **This is also useful for collaborators to see exactly what you changed.**\n",
