--- a/content/01/04_Markdown.ipynb
+++ b/content/01/04_Markdown.ipynb
@@ -14,14 +14,14 @@
     "\n",
     "Markdown is a just way to give text in a readme or notebook formatting. \n",
     "\n",
-    "## Markdown in readmes\n",
+    "## Using markdown in README files\n",
     "\n",
     "GitHub automatically shows the readme on every repo with formatted markdown: \n",
-    "- Scroll down and look at the readme for [this repo](https://github.com/LeDataSciFi/ledatascifi-2022). You can that there is bolded and italics text, code, hyperlinks and headers for sectioning. There is a lot more you can do with Markdown, but that will give you a taste. \n",
+    "- Scroll down and look at the readme for [this repo](https://github.com/LeDataSciFi/ledatascifi-2022) or [this repo](09_gitignore). You can that there is bolded and italics text, code, hyperlinks and headers for sectioning. There is a lot more you can do with Markdown, but that will give you a taste. \n",
     "- [This is the raw version of how that readme/how that file looks _before_ Github formats it nicely.](https://raw.githubusercontent.com/LeDataSciFi/ledatascifi-2022/main/README.md) \n",
     "- Compare the raw version to the formatted version. See how I added the hyperlink in the second sentence?\n",
     "\n",
-    "## Markdown in notebooks\n",
+    "## Using markdown in notebooks\n",
     "\n",
     "When we work in Jupyter, we will write python code in files called python notebooks (`ipynb` files, for \"IPYthon NoteBooks\"). In these `ipynb` files, we can have python code interspersed with sections of markdown text. As a result, we can write code and analysis that is easy to follow and execute. In other words, `ipynb` files are useful to create code that is [reproducible, reusable, and shareable[(../about/objectives).\n",
     "\n",
