big github page reorg

--- a/content/01/03_github.ipynb
+++ b/content/01/03_github.ipynb
@@ -4,18 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Github Basics\n",
-    "\n",
-    "```{important}\n",
-    "The most important part of this page is the [GitHub Workflow](#github-for-version-control). You should \n",
-    "```\n"
+    "# GitHub Basics\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Why are we using Github? \n",
+    "## Why are we using GitHub? \n",
     "\n",
     "_**Note: I use Windows and will be of less help for Mac users. The TA, however, uses Mac and will be more helpful when issues stem from OS differences. GitHub, in particular, might be finicky if you have outdated versions of Safari or any other browser.**_\n",
     "\n",
@@ -35,7 +31,7 @@
     "\n",
     "Let's get started!\n",
     "\n",
-    "## GitHub as cloud storage\n",
+    "### GitHub as cloud storage\n",
     "\n",
     "At the very least, GitHub allows for cloud storage, like Google Drive and Dropbox do. There's a bit more structure than just storing files under your account:\n",
     "\n",
@@ -54,27 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Practice\n",
-    "\n",
-    "By the end of lecture one and before the next class, you should be able to and have completed:\n",
-    "\n",
-    "1. Make a participation repo called \"Class Notes\" (with a blank README<span>.</span>md file). The repo on GitHub.com is called the \"main\" or \"master\" or \"origin\" repo. \n",
-    "2. \"Clone\" that to your computer. The folder and files on your computer are called the \"remote\" repo. \n",
-    "3. Modify the repo **in the cloud** and, then, \"fetch\" those changes to your computer. Think of \"fetch\" as syncing your computer to catch up with any changes in the master.\n",
-    "4. Modify the repo **on your computer**, and then, \"push\" those changes to the cloud. Think of \"push\" as syncing the master to catch up with any changes from your computer.\n",
-    "\n",
-    "With those exercises done, you're ready to start working while using GitHub. We'll learn more as we go along in the class, including\n",
-    "\n",
-    "- what a good `README` file does and can look like - [I _personally_ like this one](https://github.com/donbowen/BFH) but take a quick look at [this list of awesome readmes](https://github.com/matiassingers/awesome-readme) for inspiration\n",
-    "- [what the `.gitignore` file in our repos is and how/why to use it ](09_gitignore)\n",
-    "- what a merge conflict is and how to resolve it\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## GitHub for collaboration \n",
+    "### GitHub for collaboration \n",
     "\n",
     "The \"traditional\" way to collaborate involves sending files over email. But emails get buried, and, also... who has the most recent version, and what is it?\n",
     "\n",
@@ -86,45 +62,31 @@
     "\n",
     "GitHub (not just \"Git\") is built on top of the Git system. Among the many added features that make collaboration easier, two are worth highlighting:\n",
     "\n",
-    "1. The GitHub repository is treated as the \"master version\".\n",
-    "    - You and collaborators work on the files on your computer and sync them to the cloud to update the master version.\n",
+    "1. The repo hosted on GitHub's servers is the \"remote\" version. \n",
+    "    - You and collaborators can download (\"fetch\") the remote repo to your computer. The folder and files on your computer are called the \"local\" version.\n",
+    "    - You work on the files on your computer. When you're done, you upload (\"push\") your work back to the cloud to update the remote version.\n",
+    "    - If you've ever used a shared Dropbox folder, fetching and pushing are done automatically by Dropbox.\n",
+    "    - We have to do these steps manually using GitHub Desktop, but for good reason.    \n",
     "    - Use the [GitHub Workflow](#github-for-version-control) to make sure you and your collaborators don't make conflicting changes to a file. \n",
     "2. [GitHub Issues](https://guides.github.com/features/issues/) make it easier to track project tasks than using email.    \n",
     "    - Each repo has an _Issues_ tab that functions as a discussion board.\n",
     "    - One \"thread\" is called an Issue. \n",
     "    - You can tag other GitHub users by typing `@username`. E.g. using `@donbowen`.  \n",
     "    - You get email notifications if you are tagged, or are `Watch`ing a repository.\n",
-    "\n",
-    "As an example, check out the Issues in the [`ggplot2`](https://github.com/tidyverse/ggplot2/issues) repository. People raise issues of all kinds, and then when they are solved, \"Close\" the issue. \n",
+    "    - As an example, check out the Issues in the [`ggplot2`](https://github.com/tidyverse/ggplot2/issues) repository. People raise issues of all kinds, and then when they are solved, \"Close\" the issue. \n",
     "\n",
     "```{tip}\n",
     "When you have a question about your grades or a private question about an assignment, you can open that repo, click on the \"Issues\" tab, and create a new issue. Make sure to tag me and the TA in the text so we see your post.\n",
     "```\n",
     "\n",
-    "We will talk about collaboration later. Suffice it to say, managing group tasks is of paramount importance in virtually all jobs you might have after college."
+    "We will talk more about specific methods of collaboration later in the class. Suffice it to say, managing group tasks is of paramount importance in virtually all jobs you might have after college."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Collaboration practice\n",
-    "\n",
-    "**\"Exercise 1\": VERY IMPORTANT** \n",
-    "1. Find the `classmates` team within the LeDataSciFi org. (You have to click on the gradebook link in coursesite (classroom.github.com/...) and then I'll invite you. \n",
-    "2. Start `Watch`ing the `classmates` team. **THIS IS WHERE CLASS ANNOUNCEMENTS WILL BE POSTED.**\n",
-    "\n",
-    "You should now get an email notification whenever an Issue is posted by myself, the TA, or if your classmates ask a question.\n",
-    "\n",
-    "**\"Exercise 2\": Use the discussion board** \n",
-    "- Introduce yourself with 2 truths and a lie, and we can go from there. \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## GitHub for version control  \n",
+    "### GitHub for version control  \n",
     "\n",
     "Version control is a time machine! \n",
     "\n",
@@ -132,67 +94,61 @@
     "- Delete stuff and recover it later easily \n",
     "- Leave a breadcrumb trail for troubleshooting - if some update broke your code, you can go back and see what changed when it broke\n",
     "- \"Undo\" and navigate a previous state\n",
-    "- Helps you define your work and show contributions.\n",
+    "- Helps you define your work and show contributions.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using GitHub\n",
     "\n",
-    "The way you work on project with GitHub is by following what I will call \n",
-    "[the GitHub Workflow](assignments/howto_do.html#working-on-assignments-projects-taking-notes):\n",
+    "### Needed Skills\n",
     "\n",
-    "```{tip} \n",
-    "**Fetch early, commit frequently, push often!**\n",
+    "The basic skills we need to have are how to:[^adv]\n",
     "\n",
-    "This habit will help you avoid disasters, so that you get the positive features of Github without the headaches.\n",
+    "[^adv]: Students with GitHub experience, or those looking into issues later, will notice I am skipping past forks, branching, and using `git` commands. This is because GitHub is a means to getting the class going and not the target skill for the course. \n",
     "\n",
-    "```\n",
+    "- [ ] create our own repo on GitHub (start a project)\n",
+    "- [ ] clone a repo off GitHub to our computers (get ready to work on it)\n",
+    "- [ ] work on that repo on our computer and sync it to GitHub, using the [GitHub Workflow - fetch, commit, push](03a_githubworkflow) \n",
+    "- [ ] work on that repo on the website (sometimes this is quicker than the prior route)\n",
+    "- [ ] use the classmates team to build community, discuss issues, and see announcements\n",
+    "- [ ] open an issue in a repo to get help \n",
+    "- [ ] know what a good `README` file does and can look like - [I _personally_ like this one](https://GitHub.com/donbowen/BFH) but take a quick look at [this list of awesome readmes](https://GitHub.com/matiassingers/awesome-readme) for inspiration\n",
+    "- [ ] [know what the `.gitignore` file in our repos is and how/why to use it ](09_gitignore)\n",
+    "- [ ] (Optional, advanced, deferred) know what a merge conflict is and how to resolve it\n",
     "\n",
-    "````{dropdown} 1. Make your coffee, open Github Desktop, and **FETCH** the project you'll work on. \n",
-    "1. Change the \"current repository\" to the assignment you want to work on (or project, or your notes repo, etc.)\n",
-    "1. Click \"Fetch origin\" to download any changes from the master repo on the Github servers. This is important, because if someone else changed the files while you were sleeping, you'll get the most updated files to work on. \n",
-    "1. Start your work on your computer. \n",
+    "These skills require a mix of using the GitHub.com website and the GitHub Desktop app. We will cover these in class, by example. \n",
     "\n",
-    "![](https://media.giphy.com/media/xUOrwpPFzqDh48XEek/giphy.gif)\n",
+    "### Necessary exercises\n",
     "\n",
-    "```{warning}\n",
-    "If you don't \"fetch\" before you start, it's becomes easier to change a file someone else changed differently, creating a conflict. When this happens, you have to resolve the conflicting files before moving on. \n",
-    "```\n",
+    "In class, I'll give you a handout with a list of steps to follow. In summary, before the second class, you should have\n",
     "\n",
-    "````\n",
+    "1. Cloned the textbook to our computers _(fetching this repo after each class will download the slides as I post them)_\n",
+    "1. Created your own \"Class Notes\" repo, and \n",
+    "    - Invited me and the TA to it\n",
+    "    - Created a file named README.md, and added useful content to it from the GitHub browser page for the repo\n",
+    "    - Cloned it to your computer and worked on it there\n",
+    "    - Synced your work back to the cloud\n",
+    "1. **It is VERY IMPORTANT to join the classmates \"team\" so you GET ANNOUNCEMENTS!** Do these:\n",
+    "    1. Click on the \"gradebook\" or \"assignment 1\" links in coursesite. Wait for an email.\n",
+    "    2. When I invite you to the LeDataSciFi organization, accept it. \n",
+    "    1. [Find the `classmates` team within the LeDataSciFi org](https://github.com/orgs/LeDataSciFi/teams/classmates-2022https://github.com/orgs/LeDataSciFi/teams/classmates-2022). This is where class announcements will be posted. **Make sure you are \"watching\" it.** You should now get an email notification whenever an Issue is posted by myself, the TA, or if your classmates ask a question.\n",
+    "1. Introduced yourself to your classmates on the team discussion board. Look for the \"introductions\" topic. \n",
+    "1. **Download a file from GitHub.com:** Go to any repo, and click on any file. On the next page that opens, right click the \"Raw\" button and \"Save Link As\". \n",
     "\n",
-    "````{dropdown} 2. **\"COMMIT\" FREQUENTLY** (say every 30 minutes or so, but depends on the team/task): \n",
-    "- Save the files you're working on. (Just like you would while working on a Powerpoint or Word document.) \n",
-    "- When you save the file, Github Desktop (GHD) will notice it has been changed. \n",
-    "- Go to GDH. Notice that your file is listed as a \"changed\" file. \n",
-    "- **Describe those changes in the \"Summary\" and (optionally) \"Description\" boxes, and click the blue \"Commit\" button**. \n",
-    "- Try to do this every time you save your files! It will make rolling back changes easier. \n",
-    "- **Do this early and often**\n",
+    "### Additional exercises    \n",
     "\n",
-    "```{panels}\n",
-    "![](https://media.giphy.com/media/l4KhSYN6hQ7Y0FZS0/giphy.gif)\n",
-    "---\n",
-    "![](https://media.giphy.com/media/dxITs87fTAxTncZ6WL/giphy.gif)\n",
-    "```\n",
-    "````\n",
+    "When you push changes to a repo, Git doesn't upload the whole file. It sends \"commits\", which are records of _changes_ to files in the repo (called a _diff_). This reduces bandwidth needs and makes it easier to track specific changes.\n",
     "\n",
-    "```{dropdown} 3. **\"PUSH\" OFTEN, but probably less than you commit** (say every 60-90 minutes or so, but depends on the team/task): \n",
-    "- Push your changes to the cloud by clicking the blue \"push\" button in GHD. \n",
-    "- Now, you've got an up-to-date backup and teammates can see the changes and work with the latest files.\n",
-    "- GHD will warn you if someone else made a change in the meantime. If this happens, click \"fetch\" to download what they did. If there is a conflict between your work and your teammate's, you'll have to resolve it. \n",
-    "\n",
-    "![](https://i.imgflip.com/4m0jf6.jpg)\n",
-    "\n",
-    "```\n",
-    "\n",
-    "Being careful about these steps might seem pointless during solo projects, but I encourage you to practice these good habits now, so that when you do collaborative work, you're protected from mistakes.\n",
-    "\n",
-    "### Practice\n",
-    "\n",
-    "- Fact: Git only pushes/tracks the _changes_ (called a _diff_) associated with a commit, so that it doesn't need to take a snapshot of the entirety of all your files each time. \n",
-    "- View commit history of the [LeDataSciFi.github.io](https://github.com/LeDataSciFi/LeDataSciFi.github.io) repository by clicking on the \"commits\" button on the repo home page. (You'll end up [here](https://github.com/LeDataSciFi/LeDataSciFi.github.io/commits/master).)\n",
-    "- View a recent \"diff\" by clicking on the description of the commit or the button with the _SHA_ or _hash_ code (something like `990cf9a`).\n",
+    "These exercises will help you with the time-machine aspects of GitHub:\n",
+    "1. View commit history of the [LeDataSciFi.github.io](https://github.com/LeDataSciFi/LeDataSciFi.github.io) repository by clicking on the \"commits\" button on the repo home page. (You'll end up [here](https://github.com/LeDataSciFi/LeDataSciFi.github.io/commits/master).)\n",
+    "1. View a recent \"diff\" by clicking on the description of the commit or the button with the _SHA_ or _hash_ code (something like `990cf9a`).\n",
     "    - **This is also useful for collaborators to see exactly what you changed.**\n",
-    "- View the repository from a while back with the `<>` button.\n",
+    "1. View the repository from a while back with the `<>` button.\n",
     "    - Before the `990cf9a` commit, this folder looked VERY different!\n",
-    "- View the history of a file by clicking on the any, then clicking \"History\".\n",
-    "\n"
+    "1. View the history of a file by clicking on the any, then clicking \"History\".\n"
    ]
   },
   {
