--- a/content/01/03_github.ipynb
+++ b/content/01/03_github.ipynb
@@ -60,7 +60,7 @@
     "\n",
     "Git (just \"Git\") is a distributed version control system. Basically: \"Imagine if Dropbox and the \"Track changes\" feature in MS Word had a baby. Git would be that baby.\" It's great for us because it's optimized for code. \n",
     "\n",
-    "GitHub (not just \"Git\") is built on top of the Git system. Among the many added features that make collaboration easier, two are worth highlighting:\n",
+    "GitHub (not just \"Git\") is built on top of the Git system. Among the many added features that make collaboration easier, three are worth highlighting:\n",
     "\n",
     "1. The repo hosted on GitHub's servers is the \"remote\" version. \n",
     "    - You and collaborators can download (\"fetch\") the remote repo to your computer. The folder and files on your computer are called the \"local\" version.\n",
@@ -74,6 +74,8 @@
     "    - You can tag other GitHub users by typing `@username`. E.g. using `@donbowen`.  \n",
     "    - You get email notifications if you are tagged, or are `Watch`ing a repository.\n",
     "    - As an example, check out the Issues in the [`ggplot2`](https://github.com/tidyverse/ggplot2/issues) repository. People raise issues of all kinds, and then when they are solved, \"Close\" the issue. \n",
+    "    - [You can create issues on the repo for _this_ textbook to point out errors or suggest edits. Contributions are appreciated and rewarded!](https://github.com/LeDataSciFi/ledatascifi-2022/issues)\n",
+    "3. GitHub orgs have \"team\" discussion boards. Our class has one!    \n",
     "\n",
     "```{tip}\n",
     "When you have a question about your grades or a private question about an assignment, you can open that repo, click on the \"Issues\" tab, and create a new issue. Make sure to tag me and the TA in the text so we see your post.\n",
