--- a/_sources/content/01/02_Setup.ipynb
+++ b/_sources/content/01/02_Setup.ipynb
@@ -22,9 +22,9 @@
     "\n",
     "1. [Create a GitHub account](https://github.com/join), then \n",
     "    - [Fill out this survey so we know your username and get to know you](https://forms.gle/425BySmg2TxFMoid6).  \n",
-    "    - Join the class's GitHub organization by joining the \"gradebook\" repo. The link for that is in [coursesite](https://coursesite.lehigh.edu/course/view.php?id=236371), and it is \"classroom.github.com/\\<other stuff\\>\".\n",
-    "    - Please add a profile photo on GitHub, to make our exchanges and community more personal (it's easier for classmates to ignore a \"Twitter egg\" than a smiling Mountain Hawk)\n",
-    "    - Sign up for a [student discount](https://education.github.com/discount_requests/new).\n",
+    "    - Join the class's GitHub organization: Go to [coursesite](https://coursesite.lehigh.edu/course/view.php?id=236371), and click the first link under \"Assignment links\".\n",
+    "    - Please add a profile photo on GitHub, to make our exchanges and community more personal (don't be a \"Twitter egg\"!)\n",
+    "    - Optional: Sign up for a [student discount](https://education.github.com/discount_requests/new).\n",
     "\n",
     "1. Install [Anaconda](https://www.anaconda.com/products/individual#Downloads) (not [the Nicki Minaj song](https://www.youtube.com/watch?v=LDZX4ooRsWs)). \n",
     "    - _Install the latest version, make Anaconda your default Python installation, and accept all the defaults otherwise._\n",
