task list on website?

--- a/content/01/03_github.ipynb
+++ b/content/01/03_github.ipynb
@@ -43,7 +43,7 @@
     "Examples: \n",
     "\n",
     "- The [`awesome-python`](https://github.com/vinta/awesome-python) repo is a \"curated list of awesome Python frameworks, libraries, software and resources\" \n",
-    "- The [`ledatascifi-2022`](https://github.com/LeDataSciFi/ledatascifi-2022) repo, within its corresponding `LeDataSciFi` Org contains this textbook. \n"
+    "- The [`ledatascifi-2022`](https://github.com/LeDataSciFi/ledatascifi-2022) repo, within its corresponding [LeDataSciFi](https://github.com/LeDataSciFi) Org contains this textbook. \n"
    ]
   },
   {
@@ -111,15 +111,15 @@
     "\n",
     "[^adv]: Students with GitHub experience, or those looking into issues later, will notice I am skipping past forks, branching, and using `git` commands. This is because GitHub is a means to getting the class going and not the target skill for the course. \n",
     "\n",
-    "- [ ] create our own repo on GitHub (start a project)\n",
-    "- [ ] clone a repo off GitHub to our computers (get ready to work on it)\n",
-    "- [ ] work on that repo on our computer and sync it to GitHub, using the [GitHub Workflow - fetch, commit, push](03a_githubworkflow) \n",
-    "- [ ] work on that repo on the website (sometimes this is quicker than the prior route)\n",
-    "- [ ] use the classmates team to build community, discuss issues, and see announcements\n",
-    "- [ ] open an issue in a repo to get help \n",
-    "- [ ] know what a good `README` file does and can look like - [I _personally_ like this one](https://GitHub.com/donbowen/BFH) but take a quick look at [this list of awesome readmes](https://GitHub.com/matiassingers/awesome-readme) for inspiration\n",
-    "- [ ] [know what the `.gitignore` file in our repos is and how/why to use it ](09_gitignore)\n",
-    "- [ ] (Optional, advanced, deferred) know what a merge conflict is and how to resolve it\n",
+    "<label><input type=\"checkbox\" id=\"task1\" class=\"box\"> create our own repo on GitHub (start a project) </input></label> <br>\n",
+    "<label><input type=\"checkbox\" id=\"task2\" class=\"box\"> clone a repo off GitHub to our computers (get ready to work on it) </input></label> <br>\n",
+    "<label><input type=\"checkbox\" id=\"task3\" class=\"box\"> work on that repo on our computer and sync it to GitHub, using the [GitHub Workflow - fetch, commit, push](03a_githubworkflow)  </input></label> <br>\n",
+    "<label><input type=\"checkbox\" id=\"task4\" class=\"box\"> work on that repo on the website (sometimes this is quicker than the prior route) </input></label> <br>\n",
+    "<label><input type=\"checkbox\" id=\"task5\" class=\"box\"> use the classmates team to build community, discuss issues, and see announcements </input></label> <br>\n",
+    "<label><input type=\"checkbox\" id=\"task6\" class=\"box\"> open an issue in a repo to get help  </input></label> <br>\n",
+    "<label><input type=\"checkbox\" id=\"task7\" class=\"box\"> know what a good `README` file does and can look like - [I _personally_ like this one](https://GitHub.com/donbowen/BFH) but take a quick look at [this  list of awesome readmes](https://GitHub.com/matiassingers/awesome-readme) for inspiration </input></label> <br>\n",
+    "<label><input type=\"checkbox\" id=\"task8\" class=\"box\"> [know what the `.gitignore` file in our repos is and how/why to use it ](09_gitignore) </input></label> <br>\n",
+    "<label><input type=\"checkbox\" id=\"task9\" class=\"box\"> (Optional, advanced, deferred) know what a merge conflict is and how to resolve it </input></label> <br>\n",
     "\n",
     "These skills require a mix of using the GitHub.com website and the GitHub Desktop app. We will cover these in class, by example. \n",
     "\n",
