--- a/_sources/content/01/03_github.ipynb
+++ b/_sources/content/01/03_github.ipynb
@@ -105,9 +105,13 @@
    "source": [
     "## Using GitHub\n",
     "\n",
-    "### Needed Skills\n",
+    "### Necessary skills\n",
     "\n",
-    "The basic skills we need to have are how to:[^adv]\n",
+    "These skills require a mix of using the GitHub.com website and the GitHub Desktop app. We will cover these in class, by example. You should have all these covered by the third class:[^adv]\n",
+    "\n",
+    "```{margin}\n",
+    "I think you can use these check boxes to track your progress, if you'd like. \n",
+    "```\n",
     "\n",
     "[^adv]: Students with GitHub experience, or those looking into issues later, will notice I am skipping past forks, branching, and using `git` commands. This is because GitHub is a means to getting the class going and not the target skill for the course. \n",
     "\n",
@@ -121,7 +125,6 @@
     "<label><input type=\"checkbox\" id=\"task8\" class=\"box\"> [know what the `.gitignore` file in our repos is and how/why to use it ](09_gitignore) </input></label> <br>\n",
     "<label><input type=\"checkbox\" id=\"task9\" class=\"box\"> (Optional, advanced, deferred) know what a merge conflict is and how to resolve it </input></label> <br>\n",
     "\n",
-    "These skills require a mix of using the GitHub.com website and the GitHub Desktop app. We will cover these in class, by example. \n",
     "\n",
     "### Necessary exercises\n",
     "\n",
